Fixing disc image overflow issue

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -451,7 +451,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    overflow: hidden;
+    // overflow: hidden;
 
     @media only screen and (min-width: 1400px) {
         position: absolute;
